--- a/app/src/main/res/layout/fragment_manage.xml
+++ b/app/src/main/res/layout/fragment_manage.xml
@@ -22,12 +22,14 @@
         <LinearLayout
             android:id="@+id/master_block"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginStart="30dp"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="30dp"
+            android:layout_marginBottom="15dp"
             android:gravity="top|center_vertical"
             android:orientation="vertical"
+            app:layout_constraintBottom_toTopOf="@+id/Edit"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView">
@@ -108,9 +110,7 @@
                     <ListView
                         android:id="@+id/userListView"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                    </ListView>
+                        android:layout_height="wrap_content" />
 
                 </LinearLayout>
 
@@ -118,8 +118,8 @@
                     android:id="@+id/Add"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:layout_marginTop="12dp"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="12dp"
                     android:background="@drawable/add"
                     android:gravity="bottom|center_vertical"
                     android:textAlignment="center"
