--- a/app/src/main/res/layout/fragment_call_list.xml
+++ b/app/src/main/res/layout/fragment_call_list.xml
@@ -5,25 +5,24 @@
     android:id="@+id/out_call_list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#C7000000">
+    android:background="@drawable/bg_app">
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/imageView4"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:visibility="invisible"
+        android:background="#CC000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@color/common_google_signin_btn_text_dark_focused" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginBottom="70dp"
         android:background="@drawable/radius"
         android:orientation="vertical"
