before update ui

--- a/app/src/main/res/layout/fragment_manage.xml
+++ b/app/src/main/res/layout/fragment_manage.xml
@@ -95,10 +95,23 @@
                         app:srcCompat="@drawable/user_contact" />
                 </LinearLayout>
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/userListView"
+                <ScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="match_parent">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/userListView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                        </androidx.recyclerview.widget.RecyclerView>
+                    </LinearLayout>
+                </ScrollView>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -114,7 +127,7 @@
                         android:background="@drawable/add"
                         android:gravity="bottom|center_vertical"
                         android:textAlignment="center"
-                        android:visibility="visible" />
+                        android:visibility="gone" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -142,7 +155,7 @@
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_marginBottom="30dp"
-            android:background="@drawable/round_popup"
+            android:background="@drawable/radius"
             android:fontFamily="@font/roboto_light"
             android:text="Edit"
 
