--- a/app/src/main/res/layout/fragment_location.xml
+++ b/app/src/main/res/layout/fragment_location.xml
@@ -2,117 +2,171 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.location.LocationFragment">
+    android:background="@drawable/bg_app"
+    tools:context=".MainActivity">
 
 
-    <ScrollView
-        android:id="@+id/scrollView3"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="84dp"
-        tools:layout_editor_absoluteY="1dp">
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/include7"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:id="@+id/master_block"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginBottom="15dp"
+            android:gravity="top|center_vertical"
             android:orientation="vertical"
-            android:paddingLeft="30dp"
-            android:paddingRight="30dp">
+            app:layout_constraintBottom_toTopOf="@+id/Edit"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView">
 
-            <LinearLayout
-                android:id="@+id/la_1"
-                android:layout_width="wrap_content"
-                android:layout_height="101dp"
-                android:layout_marginTop="50dp"
-                android:layout_marginBottom="0dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/text_setting"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="Find Location"
-                    android:textAlignment="center"
-
-                    android:textSize="50sp"
-                    android:textStyle="italic" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/la_2"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="30dp"
+                android:layout_marginBottom="5dp">
+
+                <TextView
+                    android:id="@+id/Cancel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:clickable="true"
+                    android:contextClickable="true"
+                    android:fontFamily="@font/roboto_light"
+                    android:text="Cancel"
+                    android:textColor="#42BAFD"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:visibility="invisible"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/Done"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:clickable="true"
+                    android:contextClickable="true"
+                    android:fontFamily="@font/roboto_light"
+                    android:text="Done"
+                    android:textColor="#42BAFD"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:visibility="invisible"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <LinearLayout
+                android:id="@+id/block"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="40dp"
                 android:background="@drawable/radius"
-                android:orientation="vertical"
-                android:padding="10dp">
-
-                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:id="@+id/first_row"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:orientation="horizontal">
-
-                    <EditText
-                        android:id="@+id/edit_text_first"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="5" />
-
-                    <Button
-                        android:id="@+id/edit_location_first"
-                        android:layout_width="0dp"
-                        android:layout_height="40dp"
-                        android:layout_weight="1" />
-                </LinearLayout>
+                android:orientation="vertical">
 
                 <LinearLayout
-                    android:id="@+id/parent_linear_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"></LinearLayout>
+                    android:orientation="horizontal">
 
-                <Button
-                    android:id="@+id/add_field_button"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_gravity="center"
-                    android:background="#555"
+                    <ImageView
+                        android:id="@+id/imageView2"
+                        android:layout_width="120dp"
+                        android:layout_height="30dp"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginBottom="5dp"
+                        app:srcCompat="@drawable/location_top" />
 
-                    android:paddingLeft="5dp"
-                    android:paddingRight="5dp"
-                    android:textColor="#FFF"
 
-                    android:textSize="10dp" />
 
+
+                </LinearLayout>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/userListView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="100"
+                    android:padding="5dp">
+
+                </androidx.recyclerview.widget.RecyclerView>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0"
+                    android:gravity="center_horizontal"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/Add"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginBottom="10dp"
+                        android:layout_weight="0"
+                        android:background="@drawable/add"
+                        android:gravity="bottom|center_vertical"
+                        android:textAlignment="center"
+                        android:visibility="gone" />
+                </LinearLayout>
 
             </LinearLayout>
 
-
         </LinearLayout>
-    </ScrollView>
 
-    <Button
-        android:id="@+id/edtBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:text="Edit"
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:allowUndo="false"
+            android:fontFamily="@font/roboto_light"
+            android:text="Find Location"
+            android:textAlignment="center"
+            android:textColor="#FDFDFD"
+            android:textSize="40sp"
+            android:textStyle="italic"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
+        <Button
+            android:id="@+id/Edit"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_marginBottom="30dp"
+            android:background="@drawable/radius"
+            android:fontFamily="@font/roboto_light"
+            android:text="Edit"
 
-        app:layout_constraintBottom_toTopOf="@+id/include5"
-        app:layout_constraintEnd_toEndOf="@+id/scrollView3"
-        app:layout_constraintStart_toStartOf="parent" />
+            android:textColor="#FFFFFF"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
-
-
-
-
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <include
-        android:id="@+id/include5"
+        android:id="@+id/include7"
         layout="@layout/navbar_botton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
