--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -69,6 +69,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="35dp"
                         android:layout_marginTop="2dp"
+                        android:layout_marginBottom="10dp"
                         android:paddingLeft="10dp"
                         android:text="Gps tracking"
                         android:textColor="@color/s_text"
@@ -78,6 +79,7 @@
                         android:id="@+id/sw_gpsServer"
                         android:layout_width="match_parent"
                         android:layout_height="35dp"
+                        android:layout_marginLeft="30dp"
                         android:layout_marginTop="2dp"
                         android:layout_marginBottom="2dp"
                         android:paddingLeft="10dp"
@@ -90,6 +92,7 @@
                         android:id="@+id/sw_gpsSMS"
                         android:layout_width="match_parent"
                         android:layout_height="35dp"
+                        android:layout_marginLeft="30dp"
                         android:layout_marginTop="2dp"
                         android:layout_marginBottom="2dp"
                         android:paddingLeft="10dp"
